assets/css/page.css
.page {
    flex-grow: 1;
    display: flex;
    padding: 0 var(--oe-padding);
    flex-direction: column;

    min-height: 100%;
}

.page-hero {
    display: flex;

    margin-top: 0;
    margin-bottom: var(--oe-padding-small);
    max-height: 40vh;
}

.page-hero-image {
    width: 100lvw;
    height: auto;
    position: relative;
    top: 0;
    left: 50%;
    right: 50%;
    margin-left: -50lvw;
    margin-right: -50lvw;

    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;

    aspect-ratio: 24 / 9;
    z-index: -1;
}

.page-hero-content {
    width: 100%;
    height: 100%;
    padding-top: var(--oe-padding-large);
    padding-left: var(--oe-padding-large);
    padding-right: var(--oe-padding-large);

    z-index: 1;

    display: flex;
    flex-direction: column;
    justify-content: start;

    color: var(--oe-font-color-bright);
    & > h1 {
        font-size: var(--oe-font-size-scaling-title);
        text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
        padding: 0;
        margin: 0;
        width: calc(100% - 2 * var(--oe-padding-large));
    }

    & .image-credit {
        background-color: rgba(0, 0, 0, 0.75);
        padding: var(--oe-padding-smaller);
        font-size: x-small;
        align-self: flex-end;
        margin-top: auto;
    }
}

